syntax = "proto3";

package order;

option go_package = "./order;order_v1";

import "google/protobuf/timestamp.proto";
import "product.proto";
import "common.proto";

service OrderService {
    rpc getCartPublic(OrderCartPublicSearchParams) returns (OrderPublic);
    rpc getOrderListPublic(OrderListPublicSearchParams) returns (OrderListPublic);
}

service OrderItemService {
    rpc createOrderItemsPublic(OrderItemsPublicCreate) returns (OrderPublic);
    rpc changeOrderItemAmountPublic(OrderItemUpdatePublic) returns (OrderPublic);
    rpc deleteOrderItemPublic(OrderItemPublicDelete) returns (OrderPublic);
}

// entities

enum OrderStatus {
    INIT = 0;
    POSTED = 1;
    IN_PROCESS = 2;
    COMPLETED = 3;
    CANCELED = 4;
}

message Order {
    int32 id = 1;
    string user = 2;
    OrderStatus status = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp updatedAt = 5;
    repeated OrderItem items = 6;
}

message OrderPublic {
    message Summary {
        int32 price = 1;
        int32 productsAmount = 2;
    }

    int32 id = 1;
    OrderStatus status = 2;
    repeated OrderItemPublic items = 3;
    repeated OrderItemPublic unavailableItems = 4;
    Summary summary = 5;
}

message OrderItem {
    string id = 1;
    int32 amount = 2;
    product.ProductPrice summaryPrice = 3;
    int32 order = 4;
    product.ProductPreview product = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

message OrderItemPublic {
    string id = 1;
    int32 amount = 2;
    product.ProductPrice summaryPrice = 3;
    product.ProductPreviewPublic product = 5;
}

// requests

message OrderCartPublicSearchParams {
    string user = 2;
    common.QueryCommonParams queries = 3;
}

message OrderItemsPublicCreate {
    message Item {
        string product = 1;
        int32 amount = 2;
    }

    repeated Item items = 1;
    string user = 2;
    common.QueryCommonParams queries = 3;
}

message OrderItemUpdate {
    string id = 1;
    int32 amount = 2;
}

message OrderItemUpdatePublic {
    message Data {
        string id = 1;
        int32 amount = 2;
    }

    Data data = 1;
    string user = 2;
    common.QueryCommonParams queries = 3;
}

message OrderListPublicSearchParams {
    string user = 1;
    common.QueryCommonParams queries = 2;
}

message OrderItemPublicDelete {
    string id = 1;
    string user = 2;
    common.QueryCommonParams queries = 3;
}

//responce

message OrderListPublic {
    repeated OrderPublic items = 1;
}
